setup/Istio/observability/observability-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: observability
    istio-injection: enabled
  name: observability
spec:
  finalizers:
    - kubernetes
---
