setup/Istio/observability/observability-sidecar.yaml
---
# Sidecar in observability namespace: restrict egress to local services + system namespaces + external rook-ceph services
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: observability-egress-sidecar
  namespace: observability
spec:
  egress:
    - hosts:
        - "./*"                             # services in observability namespace
        - "istio-system/*"                  # system services (including egressgateway)
        - "kube-system/*"
        - "rook-ceph/*"                     # Ceph Storage
---
